# example-project

./: docker-compose.yml
.github/workflows/: main.yml
backend/: .env.example  Cargo.toml  Dockerfile  key.txt
backend/migrations/: 20230610164429_init.down.sql  20230610164429_init.up.sql
backend/src/: app.rs  error.rs  logger.rs  main.rs  settings.rs  utils.rs
backend/src/databases/: mod.rs
backend/src/routes/: cart.rs  mod.rs  product.rs  stats.rs  status.rs
frontend/: Dockerfile  package.json
frontend/app/: root.tsx
frontend/app/components/: cart.tsx  error-modal.tsx  header.tsx  product-list.tsx
frontend/app/routes/: _index.tsx  stats.tsx
lamdba/: drugs.js  drugs.mjs  test.mjs
