[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.0", features = ["full"] }
color-eyre = "0.6.2"
thiserror = "1.0.40"
async-trait = "0.1.68"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_derive = "1.0.152"
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
lazy_static = "1.4.0"
tower-http = { version = "0.4.0", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
rand = "0.8.5"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "macros", "bigdecimal" ] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
